SIDP-428: Address lifecycle issues around use of MetadataCredentialResolverFactory
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2960 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 Changes in Release 2.2.1
 =============================================
 [SIDP-421] - Error logging SOAP queries
+[SIDP-428] - Address lifecycle issues around use of MetadataCredentialResolverFactory
 
 Changes in Release 2.2.0
 =============================================
