use helper method to create redirect URL - SIDP-447
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2967 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -6,6 +6,7 @@ Changes in Release 2.2.1
 [SIDP-428] - Address lifecycle issues around use of MetadataCredentialResolverFactory
 [SIDP-431] - Typo in default attribute-resolver.xml
 [SIDP-434] - More Typos in Default attribute-resolver.xml
+[SIDP-447] - Fix for SIDP-417 missed RemoteUserLoginHandler
 
 Changes in Release 2.2.0
 =============================================
