put ePTID in a separate comment block and also note ePTID.old should not be used unless you really understand why you're using it - SIDP-469
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2996 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -6,7 +6,8 @@ Changes in Release 2.3.0
 [SIDP-442] - Add JSESSIONID and ClientIP to MDC
 [SIDP-461] - Add legacy Shib SSO protocol as binding for IdP-initiated SSO for SAML 2.0
 [SIDP-464] - An SPNameQualifier in NameIDPolicy always treated as an affiliation
-[SIDP-468] - Add taglib to simplify rendering login pages. 
+[SIDP-468] - Add taglib to simplify rendering login pages.
+[SIDP-469] - eduPersonTargetedID Could Be Separately Commented
 
 Changes in Release 2.2.1
 =============================================
