--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -9,6 +9,7 @@ Changes in Release 2.3.0
 [SIDP-468] - Add taglib to simplify rendering login pages.
 [SIDP-469] - eduPersonTargetedID Could Be Separately Commented
 [SIDP-471] - Taglibs appear to be caching SP information
+[SIDP-401] - Quick installer no longer does special things to the Tomcat installation for the "administrator" login
 
 Changes in Release 2.2.1
 =============================================
