SIDP-475 Better login page for IdP
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3004 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -13,6 +13,7 @@ Changes in Release 2.3.0
 [SIDP-471] - Taglibs appear to be caching SP information
 [SIDP-401] - Quick installer no longer does special things to the Tomcat installation for the "administrator" login
 [SIDP-474] - NPE in taglib processing (bug never released).
+[SIDP-475] - Better login page for IdP
 
 Changes in Release 2.2.1
 =============================================
