--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -14,6 +14,7 @@ Changes in Release 2.3.0
 [SIDP-401] - Quick installer no longer does special things to the Tomcat installation for the "administrator" login
 [SIDP-474] - NPE in taglib processing (bug never released).
 [SIDP-475] - Better login page for IdP
+[SIDP-478] - ECP profile support
 
 Changes in Release 2.2.1
 =============================================
