SIDP-483: Log Completed, Unencrypted SAML Assertion
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3016 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -17,6 +17,7 @@ Changes in Release 2.3.0
 [SIDP-478] - ECP profile support
 [SIDP-480] - Update POM to add plugin versions, use / publish to Shib.net Repo, and attach generated source and Javadocs
 [SIDP-482] - JSP pages should HTML-encode any strings they handle
+[SIDP-483] - Log Completed, Unencrypted SAML Assertion
 
 Changes in Release 2.2.1
 =============================================
