--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -18,6 +18,7 @@ Changes in Release 2.3.0
 [SIDP-480] - Update POM to add plugin versions, use / publish to Shib.net Repo, and attach generated source and Javadocs
 [SIDP-482] - JSP pages should HTML-encode any strings they handle
 [SIDP-483] - Log Completed, Unencrypted SAML Assertion
+[SIDP-486] - login.jsp page contains old wiki link
 
 Changes in Release 2.2.1
 =============================================
