SIDP-485 add alt attribute to the <idpui:serviceLogo/> tag.  Also add to to the image in the login page.  Fix typo in idpui.tld file (for serviceInformationURL)
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3023 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -19,6 +19,7 @@ Changes in Release 2.3.0
 [SIDP-482] - JSP pages should HTML-encode any strings they handle
 [SIDP-483] - Log Completed, Unencrypted SAML Assertion
 [SIDP-486] - login.jsp page contains old wiki link
+[SIDP-485] - <img> inside HTML pages must have alt attribute.
 
 Changes in Release 2.2.1
 =============================================
