--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -18,8 +18,8 @@ Changes in Release 2.3.0
 [SIDP-480] - Update POM to add plugin versions, use / publish to Shib.net Repo, and attach generated source and Javadocs
 [SIDP-482] - JSP pages should HTML-encode any strings they handle
 [SIDP-483] - Log Completed, Unencrypted SAML Assertion
-[SIDP-486] - login.jsp page contains old wiki link
-[SIDP-485] - <img> inside HTML pages must have alt attribute.
+[SIDP-485] - <img> inside HTML pages must have alt attribute.[SIDP-486] - login.jsp page contains old wiki link
+[SIDP-487] - More login.jsp changes (CR/LF issues, missing period)
 
 Changes in Release 2.2.1
 =============================================
