--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Changes in Release 2.3.1
+=============================================
+[SIDP-497] - Queries should return the same NameID supplied by the caller
+
 Changes in Release 2.3.0
 =============================================
 [SIDP-272] - Regenerate self-signed certificate with installer task
