--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,8 @@
+Changes in Release 2.3.2
+=============================================
+[SIDP-500] - shibboleth-identityprovider-2.3.1 installer broken on Windows 7 (64-bit) and Windows XP
+ - Update version of Shib Common library
+
 Changes in Release 2.3.1
 =============================================
 [SIDP-490] - REMOTE_USER handler not detecting empty value
