--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 Changes in Release 2.3.4
 =============================================
+[SIDP-516] Example login.jsp / Usage of label tag
 [SIDP-513] idpui taglib could look for more languages matches
 [SIDP-514] Alt text for IdP Logos is not esapiEncoder.encodeForHTMLAttribute
 
