Fix potential NPE - SIDP-508
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3076 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 Changes in Release 2.3.4
 =============================================
+[SIDP-508] - NullPointerException in AuthenticationEngine
 [SIDP-510] - Error with stack trace when passive cannot be honored
 [SIDP-511] - ExternalAuthnSystemLoginHandler does not support forceAuthn/isPassive
 [SIDP-513] - idpui taglib could look for more languages matches
